# cmg-telematics

./: .env.example  .gitignore  AUDITORIA_ERRORES.md  CLAUDE.md  COMMAND_LOG.md  Caddyfile  DESIGN_AUDIT.md  FIX_GPS_PTO.md  FIX_METRICAS_REPORTES.md  FIX_PLANTILLAS.md  FIX_REPORTES_FILTROS.md  FIX_UI_REPORTES.md  MEJORAS_ESTADOS_FLOTA.md  MEJORAS_GAUGES.md  MEJORAS_MAPA.md  MEJORAS_METRICAS_GRUPO.md  MEJORAS_PLANTILLAS.md  MEJORAS_REPORTES.md  MEJORAS_SEGURIDAD_ONBOARDING.md  MEJORAS_SENSORES_UX.md  MEJORAS_VIVO.md  MOBILE_RESPONSIVE.md  PLAN-VPS-1MES.md  PR_AGENT_TEST.md  REDISEÑO-PLAN.md  REFACTOR_TCP.md  REVISION_INTEGRAL_2026.md  SESION-2026-05-28.md  SESION-2026-05-29.md  TESTS_ARREGLADOS.md  add_client.sh  backup.sh  cmg_telematics_manual_tecnico.html  codemagic.yaml  docker-compose.yml  healthcheck.sh  pytest.ini  security-audit-checklist.md  setup.sh  smoke_test.sh  (+1 more)
backend/: CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_notification_email.py  003_add_maintenance_created_at.py  004_add_maintenance_tenant_fk.py  005_add_device_tenant_id.py  006_work_cycles.py  007_vehicle_type_icon_url.py  008_tenant_enabled_modules.py  011_vehicle_driver_name.py  (+57 more)
backend/app/: main.py
backend/scripts/: seed_demo.py  seed_pilot.py
backend/tests/: conftest.py  test_forgot_password.py  test_manual_can_config.py  test_reset_mailer.py  test_reset_password.py  test_reset_token.py  test_routes_optimize.py  test_sensor_transform.py
services/rules-engine/: Dockerfile  pyproject.toml
(+728 files in other folders)
